--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>NODEEXPRESSVERCEL</h1>
+    <h1>This app works</h1>
+    <p>This is a dummy app created to learn to deploy an express app to vercel</p>
     
 </body>
 </html>
